--- a/index.html
+++ b/index.html
@@ -20,24 +20,7 @@
       </header>
 
       <main>
-        <div class="container">
-          <div class="card">
-            <div class="book">
-              <img
-                src="./assets/images/jjk-vol25.svg"
-                width="200"
-                alt="Card Img"
-              />
-              <p class="title">Jujutsu Kaisen VOL. 25</p>
-              <p class="author">Gege Akutami</p>
-              <p class="pages">218 pages</p>
-            </div>
-            <label class="switch">
-              <input type="checkbox" />
-              <span class="slider"><p>Read</p></span>
-            </label>
-          </div>
-        </div>
+        <div class="container"></div>
 
         <dialog class="modal" id="modalAddBook">
           <button class="close" id="modalCloseButton">
@@ -45,19 +28,37 @@
           </button>
           <form id="addBookForm">
             <div class="canvas">
-              <label for="uploaded-image" class="upload-image">
+              <label for="uploadedImage" class="upload-image">
                 <p>Upload Image</p>
               </label>
               <input
-                id="uploaded-image"
+                id="uploadedImage"
                 type="file"
                 accept="image/*"
-                disabled
+                multiple="false"
               />
             </div>
             <div class="details">
-              <input type="text" id="title" placeholder="Title" autocomplete="off" required />
-              <input type="text" id="author" placeholder="Author" autocomplete="off" required />
+              <div class="title-div">
+                <input
+                  type="text"
+                  id="title"
+                  placeholder="Title"
+                  autocomplete="off"
+                  required
+                />
+                <span
+                  data-help="*Book already exists!"
+                  id="alreadyExists"
+                ></span>
+              </div>
+              <input
+                type="text"
+                id="author"
+                placeholder="Author"
+                autocomplete="off"
+                required
+              />
               <input
                 type="text"
                 id="pages"
@@ -90,7 +91,9 @@
             </div>
           </form>
 
-          <button type="submit" form="addBookForm">Add book</button>
+          <button type="submit" form="addBookForm" id="submitBook">
+            Add book
+          </button>
         </dialog>
 
         <button class="add" id="addBookButton">
