Add image preview when image is uploaded

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
           </button>
           <form id="addBookForm">
             <div class="canvas">
+              <img
+                id="imagePreview"
+                src="./assets/images/default.svg"
+                alt="Image Preview"
+                style="display: none;"
+              />
               <label for="uploadedImage" class="upload-image">
                 <p>Upload Image</p>
               </label>
