--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./assets/images/logo.svg" />
     <link rel="stylesheet" href="./assets/styles/utils.css" />
     <link rel="stylesheet" href="./assets/styles/main.css" />
     <title>MangaLib</title>
@@ -16,6 +17,7 @@
   <body>
     <div class="layout">
       <header>
+        <img src="./assets/images/logo.svg" width="75" alt="Logo" />
         <h1>MangaLib</h1>
       </header>
 
@@ -32,7 +34,7 @@
                 id="imagePreview"
                 src="./assets/images/default.svg"
                 alt="Image Preview"
-                style="display: none;"
+                style="display: none"
               />
               <label for="uploadedImage" class="upload-image">
                 <p>Upload Image</p>
