Change type of pages to number instead of text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 required
               />
               <input
-                type="text"
+                type="number"
                 id="pages"
                 placeholder="Pages"
                 autocomplete="off"
